--- a/examples/style.css
+++ b/examples/style.css
@@ -11,3 +11,9 @@ t-renderer {
   height: 100vh;
   display: flex;
 }
+t-gui {
+  top: 0;
+  background-color: rgba(240, 248, 255, 0.5);
+  padding: 10px;
+  position: absolute;
+}
