--- a/examples/style.css
+++ b/examples/style.css
@@ -1,3 +1,7 @@
+html {
+  -webkit-font-smoothing: antialiased;
+}
+
 body {
   margin: 0;
 }
@@ -16,4 +20,33 @@ t-gui {
   background-color: rgba(240, 248, 255, 0.5);
   padding: 10px;
   position: absolute;
+}
+
+/*
+<v-alert type="warning" outlined shaped>Broken</v-alert>
+<v-alert type="warning" shaped>Broken</v-alert>
+*/
+v-alert {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 16px;
+  padding: 16px;
+  /* position: relative; */
+  transition: 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
+}
+v-alert {
+  color: white;
+  background: currentColor;
+}
+v-alert[outlined] {
+  background: transparent !important;
+  border: thin solid currentColor;
+}
+v-alert[shaped] {
+  border-radius: 24px 4px;
+}
+
+[type='warning'] {
+  color: #fb8c00;
+  caret-color: #fb8c00;
 }
