--- a/examples/style.css
+++ b/examples/style.css
@@ -15,7 +15,7 @@ t-renderer {
   height: 100vh;
   display: flex;
 }
-t-gui {
+gui-info {
   top: 0;
   background-color: rgba(240, 248, 255, 0.5);
   padding: 10px;
