--- a/examples/style.css
+++ b/examples/style.css
@@ -16,10 +16,17 @@ t-renderer {
   display: flex;
 }
 gui-info {
-  top: 0;
-  background-color: rgba(240, 248, 255, 0.5);
-  padding: 10px;
+  background-color: rgba(240, 248, 255, 0.8);
+  padding: 20px;
   position: absolute;
+  border-radius: 0 0 20px 0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+@media (prefers-color-scheme: dark) {
+  gui-info {
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+  }
 }
 
 /*
