--- a/examples/style.css
+++ b/examples/style.css
@@ -4,17 +4,46 @@ html {
 
 body {
   margin: 0;
+  display: flex;
+  margin-left: 20px;
+  margin-right: 20px;
 }
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+  }
+}
+
 t-flex {
   display: flex;
   flex-wrap: wrap;
 }
 t-renderer {
-  /* width: 300px; */
-  /* height: 300px; */
   height: 100vh;
   display: flex;
 }
+
+/* Grid */
+v-container {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1185px;
+}
+v-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+v-row > * {
+  width: 100%;
+}
+@media (min-width: 900px) {
+  v-row > * {
+    width: 50%;
+  }
+}
+
+/* <gui-info></gui-info> */
 gui-info {
   background-color: rgba(240, 248, 255, 0.8);
   padding: 20px;
@@ -22,6 +51,7 @@ gui-info {
   border-radius: 0 0 20px 0;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+
 @media (prefers-color-scheme: dark) {
   gui-info {
     background-color: rgba(0, 0, 0, 0.8);
