--- a/examples/style.css
+++ b/examples/style.css
@@ -26,6 +26,9 @@ t-flex {
 t-renderer {
   height: 100vh;
   display: flex;
+  /* hide overlay elements */
+  overflow: hidden;
+  position: relative;
 }
 
 /* Grid */
@@ -54,11 +57,14 @@ gui-info {
   position: absolute;
   border-radius: 0 0 20px 0;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  z-index: 1;
+  max-width: 500px;
 }
 
 @media (prefers-color-scheme: dark) {
   gui-info {
     background-color: rgba(0, 0, 0, 0.8);
+    box-shadow: rgba(255, 255, 255, 0.2) 0px 7px 29px 0px;
     color: white;
   }
 }
